--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,59 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
+    <style name="AppThemeTwo" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/pHubOrange</item>
+        <item name="colorPrimaryDark">@color/pHubOrange</item>
+        <item name="colorAccent">@color/pHubOrange</item>
+        <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
+        <item name="android:colorPressedHighlight">@color/pHubOrange</item>
+        <item name="android:colorLongPressedHighlight">@color/pHubOrange</item>
+        <item name="android:colorFocusedHighlight">@color/pHubOrange</item>
+        <item name="android:colorActivatedHighlight">@color/pHubOrange</item>
+        <item name="android:activatedBackgroundIndicator">@color/pHubOrange</item>
+        <item name="windowActionModeOverlay">true</item>
+        <item name="android:datePickerDialogTheme">@color/pHubOrange</item>
+        <item name="android:windowBackground">@color/pHubGray</item>
+        <item name="android:textColor">@color/pHubGray</item>
+
+    </style>
+
+    <style name="AppThemeThree" parent="ThemeOverlay.AppCompat.Light">
+        <item name="colorPrimary">@color/pHubOrange</item>
+        <item name="colorPrimaryDark">@color/pHubOrange</item>
+        <item name="colorAccent">@color/pHubOrange</item>
+        <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
+
+    </style>
+
+    <style name = "AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
+        <item name="spinBars">true</item>
+        <item name="color">@color/pHubOrange</item>
+    </style>
+
+    <style name="ThemeToolbar" parent="Theme.AppCompat.Light"> </style>
+
+
+    <style name="MyThemeOverlay_Toolbar" parent="ThemeOverlay.MaterialComponents.Toolbar.Primary">
+        <!-- color used by navigation icon and overflow icon -->
+        <item name="colorOnPrimary">@color/pHubOrange</item>
     </style>
 
 </resources>
