individual news page and share button

--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -14,15 +14,13 @@
         android:layout_marginLeft="11dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="7dp"
-
         app:cardElevation="@dimen/cardview_default_elevation"
         app:cardCornerRadius="10dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/pHubSideBar"
-            >
+            android:background="?android:attr/selectableItemBackground" >
             <ImageView
                 android:id="@+id/img"
                 android:transitionName="img"
