--- a/app/src/main/res/layout/activity_news_detail.xml
+++ b/app/src/main/res/layout/activity_news_detail.xml
@@ -7,14 +7,11 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:context=".activities.NewsDetailActivity">
-
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        android:fitsSystemWindows="true"
-        >
-
+        android:fitsSystemWindows="true">
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
@@ -23,7 +20,6 @@
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
-
             <ImageView
                 android:id="@+id/backdrop"
                 android:layout_width="match_parent"
@@ -33,7 +29,6 @@
                 android:scaleType="centerCrop"
                 android:transitionName="img"
                 tools:ignore="UnusedAttribute" />
-
             <RelativeLayout
                 android:id="@+id/headerContent"
                 app:layout_collapseMode="pin"
@@ -42,13 +37,11 @@
                 android:layout_height="match_parent"
                 android:layout_centerInParent="true"
                 android:orientation="vertical">
-
                 <ImageView
                     android:src="@drawable/top_shadow_black"
                     android:scaleType="centerCrop"
                     android:layout_width="match_parent"
                     android:layout_height="70dp" />
-
                 <ImageView
                     android:layout_alignParentBottom="true"
                     android:src="@drawable/bottom_shadow_dark"
@@ -56,7 +49,6 @@
                     android:scaleType="centerCrop"
                     android:layout_width="match_parent"
                     android:layout_height="80dp" />
-
             </RelativeLayout>
 
             <androidx.appcompat.widget.Toolbar
@@ -84,14 +76,12 @@
                         android:text="News for you"
                         android:textSize="18dp"
                         android:textColor="@color/pHubBlack"
-
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:maxLines="1"
                         android:drawablePadding="10dp"
                         android:singleLine="true"
                         android:ellipsize="end"/>
-
                     <TextView
                         android:id="@+id/subtitle_on_appbar"
                         style="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
@@ -104,13 +94,9 @@
                         android:drawablePadding="10dp"
                         android:singleLine="true"
                         android:ellipsize="end"/>
-
                 </LinearLayout>
-
             </androidx.appcompat.widget.Toolbar>
-
         </com.google.android.material.appbar.CollapsingToolbarLayout>
-
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.core.widget.NestedScrollView
@@ -123,10 +109,10 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
             <androidx.cardview.widget.CardView
                 app:layout_behavior="@string/appbar_scrolling_view_behavior"
                 android:layout_width="match_parent"
+                app:cardBackgroundColor="@color/pHubSideBar"
                 app:cardCornerRadius="0dp"
                 app:cardElevation="@dimen/cardview_default_elevation"
                 android:layout_height="wrap_content">
@@ -145,9 +131,7 @@
                         android:textSize="19sp"
                         android:text="Title of News"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        />
-
+                        android:layout_height="wrap_content" />
                     <TextView
                         android:id="@+id/time"
                         android:layout_width="wrap_content"
@@ -156,56 +140,78 @@
                         android:layout_marginTop="10dp"
                         android:maxLines="1"
                         android:drawablePadding="10dp"
+                        android:textColor="@color/pHubGray"
                         android:singleLine="true"
                         android:ellipsize="end"
                         android:text="a time ago" />
-
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
                 app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                android:layout_marginTop="12dp"
-                android:layout_marginBottom="20dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="0dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:cardElevation="@dimen/cardview_default_elevation"
                 app:cardCornerRadius="0dp">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/pHubBlack">
+                <com.google.android.material.bottomnavigation.BottomNavigationView
+                    android:id="@+id/activity_news_options"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:background="@color/pHubSideBar">
+                </com.google.android.material.bottomnavigation.BottomNavigationView>
 
                 <TextView
+                    android:layout_marginTop="5dp"
                     android:id="@+id/news_detail_textView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@color/pHubSideBar"
+                    android:layout_below="@+id/activity_news_options"
                     android:text = "News Content"
+                    android:paddingTop="10dp"
+                    android:textColor="@color/pHubGray"
+                    android:paddingBottom="10dp"
                     android:paddingHorizontal="16dp"
                     />
+                </RelativeLayout>
 
-<!--                <RelativeLayout-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="match_parent">-->
-
-<!--&lt;!&ndash;                    <ProgressBar&ndash;&gt;-->
-<!--&lt;!&ndash;                        app:layout_behavior="@string/appbar_scrolling_view_behavior"&ndash;&gt;-->
-<!--&lt;!&ndash;                        android:id="@+id/progress_bar"&ndash;&gt;-->
-<!--&lt;!&ndash;                        android:layout_marginTop="50dp"&ndash;&gt;-->
-<!--&lt;!&ndash;                        android:layout_marginBottom="70dp"&ndash;&gt;-->
-<!--&lt;!&ndash;                        android:layout_width="match_parent"&ndash;&gt;-->
-<!--&lt;!&ndash;                        android:layout_height="wrap_content" />&ndash;&gt;-->
-
-
-<!--&lt;!&ndash;                    <WebView&ndash;&gt;-->
-<!--&lt;!&ndash;                        app:layout_behavior="@string/appbar_scrolling_view_behavior"&ndash;&gt;-->
-<!--&lt;!&ndash;                        android:id="@+id/webView"&ndash;&gt;-->
-<!--&lt;!&ndash;                        android:layout_width="match_parent"&ndash;&gt;-->
-<!--&lt;!&ndash;                        android:layout_height="match_parent"/>&ndash;&gt;-->
-
-
-<!--                </RelativeLayout>-->
 
             </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:cardBackgroundColor="@color/pHubSideBar"
+                android:layout_below="@id/news_detail_textView"
+                app:cardElevation="@dimen/cardview_default_elevation"
+                app:cardCornerRadius="0dp">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+            <ProgressBar
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
 
+                android:id="@+id/progress_bar"
+                android:layout_marginTop="50dp"
+                android:layout_marginBottom="70dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <WebView xmlns:app="http://schemas.android.com/apk/res-auto"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                android:id="@+id/webView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+            </RelativeLayout>
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
-
     </androidx.core.widget.NestedScrollView>
 
     <FrameLayout
@@ -225,7 +231,6 @@
         android:layout_marginBottom="410dp"
         android:layout_height="wrap_content"
         tools:ignore="UnusedAttribute">
-
         <ImageView
             android:layout_width="18dp"
             android:layout_height="14dp"
@@ -241,6 +246,4 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </FrameLayout>
-
-
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
