--- a/app/src/main/res/menu/navigation_header_menu.xml
+++ b/app/src/main/res/menu/navigation_header_menu.xml
@@ -3,16 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/item1"
+        android:id="@+id/account"
         android:icon="@drawable/ic_account_black"
         android:title="Account"
         />
     <item
-        android:id="@+id/item2"
+        android:id="@+id/register"
         android:icon="@drawable/ic_sign_in_black"
         android:title="Register" />
     <item
-        android:id="@+id/item3"
+        android:id="@+id/upload"
         android:icon="@drawable/ic_upload_black"
         android:title="Upload">
     </item>
