--- a/app/src/main/res/layout/activity_news_detail.xml
+++ b/app/src/main/res/layout/activity_news_detail.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
+    android:fitsSystemWindows="false"
     tools:context=".activities.NewsDetailActivity">
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
@@ -175,6 +175,7 @@
                     android:layout_below="@+id/activity_news_options"
                     android:text = "News Content"
                     android:paddingTop="10dp"
+                    android:textSize="16dp"
                     android:textColor="@color/pHubGray"
                     android:paddingBottom="10dp"
                     android:paddingHorizontal="16dp"
