--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -67,6 +67,7 @@
                 android:layout_marginRight="20dp"
                 android:layout_marginTop="-50dp">
                 <ImageView
+                    android:id="@+id/cardViewDateIcon"
                     android:layout_width="15dp"
                     android:layout_height="15dp"
                     android:layout_marginLeft="5dp"
