--- a/app/src/main/res/menu/share.xml
+++ b/app/src/main/res/menu/share.xml
@@ -8,6 +8,11 @@
         android:icon="@drawable/ic_share_white"
         app:showAsAction="always">
     </item>
+    <item
+        android:id="@+id/favorite"
+        android:title="Add to Favorites"
+        app:showAsAction="never"
+        android:enabled="false"/>
     <item android:id="@+id/web_view"
         android:title="Open With Browser"
         app:showAsAction="never"
